Make sure HR doesnt make the page be wider than the screen Add spacing for bio block on smaller screens

--- a/css/sass/3-particles/_social-share.scss
+++ b/css/sass/3-particles/_social-share.scss
@@ -1,5 +1,4 @@
 #social-share {
-	height: 60px;
 	margin: 10px 0 30px 0;
 
 	@include clearfix;
